--- a/Integration/FruitNameDisplay/FruitsNameDisplay/pom.xml
+++ b/Integration/FruitNameDisplay/FruitsNameDisplay/pom.xml
@@ -23,7 +23,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>	//Thymeleaf függőség
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
 
